syntax = "proto3";

// TODO(dbentley): integrate this into our go build
// For now, to compile into local.pb.go, you need to:
// install a protoc with libproto version >= 3.0.0 from https://github.com/google/protobuf
// install protoc-gen-go from https://github.com/golang/protobuf (you need this to be on your $PATH, not your GOPATH)
// in this directory (github.com/scootdev/scoot/local/protocol), run:
// protoc -I . local.proto --go_out=plugins=grpc:.


// Protocol for talking to a Local Scoot Server.

package protocol;

service LocalScoot {
  rpc Echo (EchoRequest) returns (EchoReply) {}

  rpc Run(Command) returns (ProcessStatus) {}
  rpc Status(StatusQuery) returns (ProcessStatus) {}
}

message EchoRequest {
  string ping = 1;
}

message EchoReply {
  string pong = 1;
}

enum ProcessState {
  UNKNOWN = 0;
  PENDING = 1;
  RUNNING = 2;

  COMPLETED = 3;
  FAILED = 4;
}

message Command {
  repeated string argv = 1;
  map<string, string> env = 2;
  // Timeout in nanoseconds
  int64 timeout = 3;
}

message ProcessStatus {
  string run_id = 1;
  ProcessState state = 2;
  string stdout_ref = 3;
  string stderr_ref = 4;
  int32 exit_code = 5;
  string error = 6;
}

message StatusQuery {
  string run_id = 1;
}